seguimos ajustando responsive

--- a/css/style.css
+++ b/css/style.css
@@ -274,6 +274,12 @@ body {
     /* Espaciado vertical opcional */
 }
 
+@media (max-width: 767px) {
+    .contacte-llinks{
+        flex-direction: column;
+    }
+}
+
 
 
 
