--- a/css/style.css
+++ b/css/style.css
@@ -91,84 +91,10 @@ a {
 .menu-links a:hover {
   color: DarkOliveGreen;
 }
-/* 
-a:not(.menu-links a) {
-  font-weight: 700;
-  color: white;
-  transition: color 0.3s, text-shadow 0.3s;
-  text-decoration: none;
-  position: relative;
-}
-
-a:not(.menu-links a):hover,
-a:not(.menu-links a):focus-visible {
-  color: #67aaff;
-  text-shadow: 0 0 6px #fff, 0 0 8px #67aaff;
-  outline: none;
-}
-
-a:not(.menu-links a):active {
-  color: #ff8c42;
-  text-shadow: 0 0 8px #ff8c42;
-}
-
-a:not(.menu-links a):visited {
-  color: #b980e4;
-} */
-
-/* a.link-con-href {
-  font-weight: 700;
-  color: white;
-  transition: color 0.3s ease, text-decoration 0.3s ease;
-}
-
-a.link-con-href:hover {
-  color: #0000ee;
-  text-shadow: white 1px 1px 1px, white -1px -1px 1px;
-} */
-
 /*LA LISTA*/
-
-/* Elimina los bullets nativos y prepara para custom */
 ul {
   list-style-type: none;
   padding-left: 0;
-}
-
-/* Configura posición para los bullets personalizados */
-li {
-  position: relative;
-  /* Necesario para posicionar el pseudo-elemento */
-  padding-left: 1.5em;
-  /* Espacio para el bullet */
-  margin-bottom: 10px;
-  font-size: 16px;
-  line-height: 1.2;
-}
-
-/* Crea el bullet personalizado con animación */
-
-/* Animación con prefijos para mejor compatibilidad */
-@-webkit-keyframes blink {
-  0%,
-  100% {
-    opacity: 1;
-  }
-
-  50% {
-    opacity: 0;
-  }
-}
-
-@keyframes blink {
-  0%,
-  100% {
-    opacity: 1;
-  }
-
-  50% {
-    opacity: 0;
-  }
 }
 
 /*MENÚS FLOTANTES*/
@@ -228,25 +154,85 @@ body {
 }
 
 #berta {
+  position: relative;
+
   display: flex;
   justify-content: center;
   align-items: center;
   min-height: 100dvh;
+  /* min-width: 100dvw; */
   text-align: center;
 }
 
-/*
-#logo-container--404 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    min-height: 100dvh;
+#berta h1 {
+  position: absolute;
+  top: 33vh;
 }
-    */
+
+.berta-links {
+  width: 22%;
+}
+
+.link-sobre .bg-sobre {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: auto;
+  z-index: -1;
+  pointer-events: none;
+}
+
+.link-sobre:nth-child(1) .bg-sobre {
+  width: clamp(450px, 10vw, 900px);
+}
+
+.link-sobre:nth-child(2) .bg-sobre {
+  width: clamp(220px, 13vw, 440px);
+}
+
+.link-sobre:nth-child(3) .bg-sobre {
+  width: clamp(400px, 9vw, 800px);
+}
+
+.link-sobre:nth-child(4) .bg-sobre {
+  width: clamp(210px, 11vw, 420px);
+}
+
+.sobre1 {
+  position: absolute;
+  bottom: 40vh;
+  left: -10vw;
+}
+
+.sobre2 {
+  position: absolute;
+  bottom: 42vh;
+  left: 10vw;
+}
+
+.sobre3 {
+  position: absolute;
+  top: 50vh;
+  right: 0vw;
+}
+
+.sobre4 {
+  position: absolute;
+  bottom: 35vh;
+  right: -15vw;
+}
+
+.berta-subtext {
+  position: absolute;
+  bottom: 10dvh;
+}
+
+/*descripcio*/
 
 #descripcio {
   display: flex;
+  position: relative;
   flex-direction: column;
   justify-content: center;
   align-items: center;
