--- a/css/style.css
+++ b/css/style.css
@@ -596,3 +596,17 @@ body {
     opacity: 1;
   }
 }
+
+.error-container {
+  display: flex;
+
+  justify-content: center;
+  align-items: center;
+
+  flex-direction: column;
+
+  min-height: 100dvh;
+  text-align: center;
+  gap: 2vh;
+  padding: 0 20px;
+}
