--- a/css/style.css
+++ b/css/style.css
@@ -610,3 +610,11 @@ body {
   gap: 2vh;
   padding: 0 20px;
 }
+
+.meowrhino {
+  text-align: center;
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+}
